<resources>
    <string name="app_name" translatable="false">Spell4Wiki</string>
    <string name="spell_4_wiki_all" translatable="false">Spell4wiki</string>
    <string name="spell4wiktionary" translatable="false">Spell for Wiktionary</string>
    <string name="spell4wordlist" translatable="false">Spell for WordList</string>
    <string name="spell4word" translatable="false">Spell for Word</string>
    <string name="record_duration" translatable="false">00:10</string>
    <string name="account_name" translatable="false">Spell4Wiki</string>
    <string name="account_type" translatable="false">com.manimarank.spell4wiki</string>
    <string name="license_name_cc_by_three" translatable="false">Attribution 3.0</string>
    <string name="license_name_cc_by_four" translatable="false">Attribution 4.0</string>
    <string name="license_name_cc_by_sa_three" translatable="false">Attribution-ShareAlike 3.0</string>
    <string name="license_name_cc_by_sa_four" translatable="false">Attribution-ShareAlike 4.0</string>
    <string name="license_name_cc_zero" translatable="false">CC0(release all rights)</string>
    <string name="sample_url" translatable="false">https://manimaran96.wordpress.com</string>
    <string name="wiktionary">Wiktionary</string>
    <string name="search_on_wiktionary">Search on Wiktionary</string>
    <string name="wiki_login">Wiki Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_verification_message">A verification code has been sent to your email address. Please enter the code below to complete login.</string>
    <string name="otp_required">Email verification required</string>
    <string name="invalid_otp">Please enter a valid verification code</string>
    <string name="verify_and_login">Verify &amp; Login</string>
    <string name="please_wait">Please wait…</string>
    <string name="logging_in">Logging in…</string>
    <string name="verifying_code">Verifying code…</string>
    <string name="done">Done</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="join_wiki">Join Wiki</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip_login">Skip Login</string>
    <string name="welcome_user">Welcome, %s</string>
    <string name="loading">Loading…</string>
    <string name="view_my_contribution">My Contributions</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="login_to_contribute">Login to contribute</string>
    <string name="contribute_to_wiki_commons">Contribute to Wikimedia commons?</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="record">Record</string>
    <string name="link_copied">Link copied</string>
    <string name="link_share_message">Visit : %s\nLink share from Spell4Wiki App.</string>
    <string name="link_share_title">Share link to your friends…</string>
    <string name="app_share_title">Share Spell4Wiki App to your friends…</string>
    <string name="app_share_invite_message">🎊🎉 I am happy to invite you to contribute your voice for wiktionary words using Spell4Wiki android application. 🎉🎊\n\n%s\nSpell4Wiki is a Free Software(GPLv3).</string>
    <string name="app_description">Spell4Wiki is a mobile application to record and upload audio for Wiktionary words to Wikimedia Commons. It is also a multilingual Wiki-Dictionary.</string>
    <string name="app_share_link">App Link :\n%s</string>
    <string name="upload">Upload</string>
    <string name="before_record">Hold the Mic to Record</string>
    <string name="during_record">Recording…  %s</string>
    <string name="after_record">Hold the Mic to Re-Record</string>
    <string name="declaration_note">I declare, This is my own work and anyone can use it under the %s license.</string>
    <string name="record_audio_not_found">Please record audio first.</string>
    <string name="recorded_audio_too_short">Check Recorded audio.</string>
    <string name="recording_under_process">Recording under process</string>
    <string name="permission_required">Microphone and Storage permissions required.</string>
    <string name="go_settings">GO SETTINGS</string>
    <string name="notification_permission_title">Enable Notifications</string>
    <string name="notification_permission_rationale">Spell4Wiki would like to send you notifications about recording progress and upload status. This helps you stay informed about your contributions.</string>
    <string name="notification_permission_denied_title">Notification Permission Required</string>
    <string name="notification_permission_denied_message">To receive important updates about your recordings and uploads, please enable notifications in Settings.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="message_upload_info">Uploading…\n%s</string>
    <string name="crash_report_alert_title">Help Improve Spell4Wiki</string>
    <string name="crash_report_alert_message">A crash was detected in the previous session. Would you like to send the crash report to help us fix this issue and improve the app?</string>
    <string name="crash_send_button">Send Report</string>
    <string name="crash_cancel_button">Not Now</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="upload_success">Successfully uploaded the pronunciation of %s</string>
    <string name="select_file">Select file</string>
    <string name="next">Next</string>
    <string name="type_word">Type or Paste your words here</string>
    <string name="enter_word">Type word</string>
    <string name="enter_word_to_record">Enter a word to record its pronunciation</string>
    <string name="hint_select_file">Select .txt file which contains list of words to contribute.</string>
    <string name="hint_select_file_next">Make sure that you have one word per line.</string>
    <string name="direct_content">Direct content</string>
    <string name="hint_direct_copy">Copy &amp; paste or Type words to contribute.</string>
    <string name="hint_direct_copy_next">Type or Paste in below box\n(One word per line).</string>
    <string name="hint_common_steps">---------- NOTE ----------\nEach word must be in a separate line.\nAlign words properly If necessary.\n</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_to_back">Do you want to go back?</string>
    <string name="select_language">Select Language</string>
    <string name="search_languages">Search languages</string>
    <string name="selected_language">Selected Language</string>
    <string name="contributor_avatar">Contributor avatar</string>
    <string name="open_profile">Open profile</string>
    <string name="select_input_method">Select Input Method</string>
    <string name="enter_words_to_record">Enter words to record</string>
    <string name="back">Back</string>
    <string name="info">Info</string>
    <string name="rate_app">Rate the App</string>
    <string name="share_app">Share the App</string>
    <string name="share">Share</string>
    <string name="powered_by">Powered By</string>
    <string name="kaniyam">Kaniyam Foundation</string>
    <string name="about_kaniyam">The Kaniyam Foundation is an organization for ensuring the development of the use of Tamil language in all aspects of science and socio-economic development and making knowledge &amp; resources available in free access.</string>
    <string name="vglug">VGLUG Foundation</string>
    <string name="about_vglug">Villupuram GNU/Linux Users Group (Villupuram GLUG) is a non profit organization started in 2013, inspired by Free and open-source software (FOSS).</string>
    <string name="how_to_contribute">How to Contribute?</string>
    <string name="source_code">See Source Code</string>
    <string name="help_development">Buy Coffee to Developer</string>
    <string name="support_development">Support Development</string>
    <string name="contributors">Contributors</string>
    <string name="credits">Credits</string>
    <string name="third_party_libraries">Third Party Libraries</string>
    <string name="feedback">Feedback &amp; Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_us_translate">Help us Translate</string>
    <string name="join_telegram">Join Telegram Group</string>
    <string name="join_spell4wiki_support">Join Spell4Wiki Support</string>
    <string name="filter_cancelled">Filter operation cancelled</string>
    <string name="about_app">@string/app_intro_slide_1_description </string>
    <string name="version">Version</string>
    <string name="license">License</string>
    <string name="copy_link">Copy link</string>
    <string name="favorite">Favorite</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="select_language_response_msg">%s - language selected.</string>
    <string name="refresh">Refresh</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="contributions">Contributions : %s</string>
    <string name="language">Language</string>
    <string name="license_of_upload_audio">Upload Audio - License</string>
    <string name="license_choose_alert">Choose the CC License</string>
    <string name="core_contributors">Core Contributors</string>
    <string name="code_contributors">Code Contributors</string>
    <string name="wiki_tech_helpers">Wikimedia &amp; Tech Helpers</string>
    <string name="language_for_note">Note : Language for %s option.</string>
    <string name="wiktionary_search">Wiktionary search</string>
    <string name="app_settings">App Settings</string>
    <string name="app_language">App Language</string>
    <string name="wiktionary_cleanup">Wiktionary Simplified</string>
    <string name="wiktionary_cleanup_description">Expand all sections for easier reading</string>
    <string name="app_theme">App Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system_default">System Default</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="searching">Searching...</string>
    <string name="no_results_found">No results found</string>
    <string name="action_add">Add</string>
   <string name="choose_your_preferred_app_language">Choose your preferred language.\nCurrent app language : %s</string>
    <string name="choose_your_preferred_contribution_language">Choose your preferred language.\nCurrent contribution language : %s</string>
    <string name="choose_app_language">Choose app language</string>
    <string name="choose_contribution_language">Choose contribution  language</string>
    <string name="app_language_selection">App Language Selection</string>
    <string name="contribution_language_selection">Contribution Language Selection</string>
    <string name="yes_continue">Yes, Continue</string>
    <string name="later">Later</string>
    <string name="temporary">Temporary</string>
    <string name="checking_file_availability">Checking file availability\n(%s)</string>
    <string name="ask_to_add_language">Do you want to add your language?</string>
    <string name="select_category">Search &amp; Select Category</string>
    <string name="search_categories">Search categories</string>
    <string name="add_my_language">Add My Language</string>
    <string name="language_search_info">Can\'t find your language? Contact us to add it.</string>
</resources>