<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.BaseActivity">

    <item
        android:id="@+id/action_lang_code"
        android:orderInCategory="1"
        android:title="@string/select_language"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_lang_change"
        android:icon="@drawable/ic_language"
        android:orderInCategory="2"
        android:title="@string/select_language"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="withText"/>



</menu>

